--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -348,6 +348,8 @@ Pretty distinct names for buffers
       )
     )
 #+END_SRC
+   #+BEGIN_SRC emacs-lisp
+   #+END_SRC
 
 =rainbow-mode= is a minor mode for Emacs which displays strings
 representing colors with the color they represent as background.
@@ -452,6 +454,13 @@ representing colors with the color they represent as background.
       (setq helm-command-prefix-key "C-c h")
       (setq helm-quick-update t)
       (require-package 'helm-swoop)
+      (after 'helm-autoloads
+        (global-set-key (kbd "M-x") 'helm-M-x)
+        (define-key evil-normal-state-map (kbd "SPC e") 'helm-recentf)
+        (define-key evil-normal-state-map (kbd "SPC t") 'helm-etags-select)
+        (define-key evil-normal-state-map (kbd "SPC l") 'helm-swoop)
+        (define-key evil-normal-state-map (kbd "SPC y") 'helm-show-kill-ring)
+        (define-key evil-normal-state-map [f5] 'helm-mini))
       (after 'projectile
         (require-package 'helm-projectile))
       )
@@ -509,7 +518,6 @@ representing colors with the color they represent as background.
     :config
     (progn
       (setq smex-save-file (concat user-emacs-directory ".cache/smex-items"))
-      (global-set-key (kbd "M-x") 'smex)
       (global-set-key (kbd "C-x C-m") 'smex)
       (global-set-key (kbd "C-c C-m") 'smex)
       (smex-initialize)
@@ -549,7 +557,8 @@ representing colors with the color they represent as background.
       (add-hook 'haskell-mode-hook
                 (lambda ()
                   (turn-on-haskell-doc-mode)
-                  (setq evil-auto-indent nil)
+                  (after 'evil
+                      (setq evil-auto-indent nil))
                   (turn-on-haskell-indentation)
                   (ghc-init)))
       (add-hook 'haskell-interactive-mode
@@ -608,201 +617,194 @@ representing colors with the color they represent as background.
 #+END_SRC
 * Evil
 #+BEGIN_SRC emacs-lisp
-  (require-package 'evil)
-  (require-package 'evil-leader)
-  (require-package 'evil-visualstar)
-  (require-package 'evil-nerd-commenter)
-  (require-package 'evil-indent-textobject)
-  (require-package 'evil-matchit)
-  (require-package 'surround)
-  
-  (setq evil-want-C-u-scroll t
-      evil-want-C-w-in-emacs-state t
-      evil-search-module 'evil-search
-      evil-magic 'very-magic
-      evil-emacs-state-cursor '("red" box)
-      evil-normal-state-cursor '("green" box)
-      evil-insert-state-cursor '("orange" bar)
-      evilnc-hotkey-comment-operator "gc"
-      )
-  (use-package evil
-    :config
-    (progn
-      (use-package evil-leader
-        :config
-        (progn
-          (evil-mode 1)
-          (global-evil-leader-mode)
-          (evil-leader/set-leader ",")
-          (setq my-eshell-buffer-count 0)
-          (evil-leader/set-key
-              "w" 'save-buffer
-              "e" (kbd "C-x C-e")
-              "E" (kbd "C-M-x")
-              "c" (bind
-                   (evil-window-split)
-                   (setq my-eshell-buffer-count (+ 1 my-eshell-buffer-count))
-                   (eshell my-eshell-buffer-count))
-              "C" 'customize-group
-              "b d" 'kill-this-buffer
-              "v" (kbd "C-w v C-w l")
-              "s" (kbd "C-w s C-w j")
-              "g s" 'magit-status
-              "g l" 'magit-log
-              "g d" 'vc-diff
-              "P" 'package-list-packages
-              "h" help-map
-              "h h" 'help-for-help-internal)
-          )
+    (require-package 'evil)
+    (require-package 'evil-leader)
+    (require-package 'evil-visualstar)
+    (require-package 'evil-nerd-commenter)
+    (require-package 'evil-indent-textobject)
+    (require-package 'evil-matchit)
+    (require-package 'surround)
+    
+    (setq evil-want-C-u-scroll t
+        evil-want-C-w-in-emacs-state t
+        evil-search-module 'evil-search
+        evil-magic 'very-magic
+        evil-emacs-state-cursor '("red" box)
+        evil-normal-state-cursor '("green" box)
+        evil-insert-state-cursor '("orange" bar)
+        evilnc-hotkey-comment-operator "gc"
         )
-      (use-package evil-nerd-commenter)
-      (require 'evil-indent-textobject)
-      (require 'evil-visualstar)
-      (require 'evil-matchit)
-      (use-package surround
-        :config
+    (use-package evil
+      :config
+      (progn
+        (use-package evil-leader
+          :config
           (progn
-            (global-surround-mode 1)
+            (evil-mode 1)
+            (global-evil-leader-mode)
+            (evil-leader/set-leader ",")
+            (setq my-eshell-buffer-count 0)
+            (evil-leader/set-key
+                "w" 'save-buffer
+                "e" (kbd "C-x C-e")
+                "E" (kbd "C-M-x")
+                "c" (bind
+                     (evil-window-split)
+                     (setq my-eshell-buffer-count (+ 1 my-eshell-buffer-count))
+                     (eshell my-eshell-buffer-count))
+                "C" 'customize-group
+                "b d" 'kill-this-buffer
+                "v" (kbd "C-w v C-w l")
+                "s" (kbd "C-w s C-w j")
+                "g s" 'magit-status
+                "g l" 'magit-log
+                "g d" 'vc-diff
+                "P" 'package-list-packages
+                "h" help-map
+                "h h" 'help-for-help-internal)
             )
-        )
-  
-      (dolist (mode '(eshell-mode
-                      shell-mode
-                      term-mode
-                      terminal-mode
-                      comint-mode
-                      skewer-repl-mode
-                      profiler-report-mode
-                      erc-mode weechat-mode
-                      direx:direx-mode
-                      project-explorer-mode))
-        (evil-set-initial-state mode 'emacs))
-  
-      (evil-define-text-object my-evil-next-match (count &optional beg end type)
-        "Select next match."
-        (evil-ex-search-previous 1)
-        (evil-ex-search-next count)
-        (list evil-ex-search-match-beg evil-ex-search-match-end))
-  
-      (evil-define-text-object my-evil-previous-match (count &optional beg end type)
-        "Select previous match."
-        (evil-ex-search-next 1)
-        (evil-ex-search-previous count)
-        (list evil-ex-search-match-beg evil-ex-search-match-end))
-  
-      (define-key evil-motion-state-map "gn" 'my-evil-next-match)
-      (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
-  
-      (defadvice evil-ex-search-next (after advice-for-evil-ex-search-next activate)
-        (evil-scroll-line-to-center (line-number-at-pos)))
-  
-      (defadvice evil-ex-search-previous (after advice-for-evil-ex-search-previous activate)
-        (evil-scroll-line-to-center (line-number-at-pos)))
-  
-      (require-package 'key-chord)
-      (key-chord-mode 1)
-      (define-key evil-motion-state-map "gn" 'my-evil-next-match)
-      (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
-  
-      ;;; esc quits
-      (define-key evil-normal-state-map [escape] 'keyboard-quit)
-      (define-key evil-visual-state-map [escape] 'keyboard-quit)
-      (define-key minibuffer-local-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-ns-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-completion-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-must-match-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-isearch-map [escape] 'minibuffer-keyboard-quit)
-  
-      (after 'ace-jump
-          (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
-          (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
-          (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
-  
-    (after 'evil-matchit
-      (define-key evil-normal-state-map "%" 'evilmi-jump-items))
-  
-    (after 'git-gutter+-autoloads
-      (define-key evil-normal-state-map (kbd "[ h") 'git-gutter+-previous-hunk)
-      (define-key evil-normal-state-map (kbd "] h") 'git-gutter+-next-hunk)
-      (define-key evil-normal-state-map (kbd ", g a") 'git-gutter+-stage-hunks)
-      (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
-      (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
-  
-    (after 'smex
-      (define-key evil-visual-state-map (kbd "SPC SPC") 'smex)
-      (define-key evil-normal-state-map (kbd "SPC SPC") 'smex))
-  
-    (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
-    (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
-    (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
-    (define-key evil-normal-state-map (kbd "SPC f") 'ido-find-file)
-  
-    (after 'helm-autoloads
-      (define-key evil-normal-state-map (kbd "SPC e") 'helm-recentf)
-      (define-key evil-normal-state-map (kbd "SPC t") 'helm-etags-select)
-      (define-key evil-normal-state-map (kbd "SPC l") 'helm-swoop)
-      (define-key evil-normal-state-map (kbd "SPC y") 'helm-show-kill-ring)
-      (define-key evil-normal-state-map [f5] 'helm-mini))
-  
-    (define-key evil-normal-state-map (kbd "[ SPC") (bind (evil-insert-newline-above) (forward-line)))
-    (define-key evil-normal-state-map (kbd "] SPC") (bind (evil-insert-newline-below) (forward-line -1)))
-    (define-key evil-normal-state-map (kbd "[ e") (kbd "ddkP"))
-    (define-key evil-normal-state-map (kbd "] e") (kbd "ddp"))
-    (define-key evil-normal-state-map (kbd "[ b") 'previous-buffer)
-    (define-key evil-normal-state-map (kbd "] b") 'next-buffer)
-    (define-key evil-normal-state-map (kbd "[ q") 'previous-error)
-    (define-key evil-normal-state-map (kbd "] q") 'next-error)
-  
-    (define-key evil-normal-state-map (kbd "g p") (kbd "` [ v ` ]"))
-  
-    (after 'etags-select
-      (define-key evil-normal-state-map (kbd "g ]") 'etags-select-find-tag-at-point))
-  
-    (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
-    (define-key evil-normal-state-map (kbd "C-q") 'universal-argument)
-  
-    (define-key evil-normal-state-map (kbd "C-h") 'evil-window-left)
-    (define-key evil-normal-state-map (kbd "C-j") 'evil-window-down)
-    (define-key evil-normal-state-map (kbd "C-k") 'evil-window-up)
-    (define-key evil-normal-state-map (kbd "C-l") 'evil-window-right)
-  
-    (define-key evil-motion-state-map "j" 'evil-next-visual-line)
-    (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
-  
-    (define-key evil-normal-state-map (kbd "Y") (kbd "y$"))
-  
-    (define-key evil-visual-state-map (kbd ", e") 'eval-region)
-  
-    ;; emacs lisp
-    (after 'elisp-slime-nav-autoloads
-      (evil-define-key 'normal emacs-lisp-mode-map (kbd "g d") 'elisp-slime-nav-find-elisp-thing-at-point)
-      (evil-define-key 'normal emacs-lisp-mode-map (kbd "K") 'elisp-slime-nav-describe-elisp-thing-at-point))
-  
-    (after 'ag-autoloads
-      (define-key evil-normal-state-map (kbd "SPC /") 'ag-regexp-project-at-point))
-  
-    (after 'multiple-cursors
-      (define-key evil-visual-state-map (kbd "C->") 'mc/mark-all-like-this)
-      (define-key evil-normal-state-map (kbd "C->") 'mc/mark-next-like-this)
-      (define-key evil-normal-state-map (kbd "C-<") 'mc/mark-previous-like-this))
-  
-    (after 'ace-jump-mode-autoloads
-      (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
-      (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
-      (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
-  
-    (after 'magit
-      (define-key magit-status-mode-map (kbd "C-n") 'magit-goto-next-sibling-section)
-      (define-key magit-status-mode-map (kbd "C-p") 'magit-goto-previous-sibling-section)
-      (evil-add-hjkl-bindings magit-status-mode-map 'emacs
-        "K" 'magit-discard-item
-        "l" 'magit-key-mode-popup-logging
-        "h" 'magit-toggle-diff-refine-hunk))
-  
-    ;; butter fingers
-    (evil-ex-define-cmd "Q" 'evil-quit)
-    (evil-ex-define-cmd "Qa" 'evil-quit-all)
-    (evil-ex-define-cmd "QA" 'evil-quit-all)
+          )
+        (use-package evil-nerd-commenter)
+        (require 'evil-indent-textobject)
+        (require 'evil-visualstar)
+        (require 'evil-matchit)
+        (use-package surround
+          :config
+            (progn
+              (global-surround-mode 1)
+              )
+          )
+    
+        (dolist (mode '(eshell-mode
+                        shell-mode
+                        term-mode
+                        terminal-mode
+                        comint-mode
+                        skewer-repl-mode
+                        profiler-report-mode
+                        erc-mode weechat-mode
+                        direx:direx-mode
+                        project-explorer-mode))
+          (evil-set-initial-state mode 'emacs))
+    
+        (evil-define-text-object my-evil-next-match (count &optional beg end type)
+          "Select next match."
+          (evil-ex-search-previous 1)
+          (evil-ex-search-next count)
+          (list evil-ex-search-match-beg evil-ex-search-match-end))
+    
+        (evil-define-text-object my-evil-previous-match (count &optional beg end type)
+          "Select previous match."
+          (evil-ex-search-next 1)
+          (evil-ex-search-previous count)
+          (list evil-ex-search-match-beg evil-ex-search-match-end))
+    
+        (define-key evil-motion-state-map "gn" 'my-evil-next-match)
+        (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
+    
+        (defadvice evil-ex-search-next (after advice-for-evil-ex-search-next activate)
+          (evil-scroll-line-to-center (line-number-at-pos)))
+    
+        (defadvice evil-ex-search-previous (after advice-for-evil-ex-search-previous activate)
+          (evil-scroll-line-to-center (line-number-at-pos)))
+    
+        (require-package 'key-chord)
+        (key-chord-mode 1)
+        (define-key evil-motion-state-map "gn" 'my-evil-next-match)
+        (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
+    
+        ;;; esc quits
+        (define-key evil-normal-state-map [escape] 'keyboard-quit)
+        (define-key evil-visual-state-map [escape] 'keyboard-quit)
+        (define-key minibuffer-local-map [escape] 'minibuffer-keyboard-quit)
+        (define-key minibuffer-local-ns-map [escape] 'minibuffer-keyboard-quit)
+        (define-key minibuffer-local-completion-map [escape] 'minibuffer-keyboard-quit)
+        (define-key minibuffer-local-must-match-map [escape] 'minibuffer-keyboard-quit)
+        (define-key minibuffer-local-isearch-map [escape] 'minibuffer-keyboard-quit)
+    
+        (after 'ace-jump
+            (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
+            (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
+            (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
+    
+      (after 'evil-matchit
+        (define-key evil-normal-state-map "%" 'evilmi-jump-items))
+    
+      (after 'git-gutter+-autoloads
+        (define-key evil-normal-state-map (kbd "[ h") 'git-gutter+-previous-hunk)
+        (define-key evil-normal-state-map (kbd "] h") 'git-gutter+-next-hunk)
+        (define-key evil-normal-state-map (kbd ", g a") 'git-gutter+-stage-hunks)
+        (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
+        (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
+    
+      (after 'smex
+        (define-key evil-visual-state-map (kbd "SPC SPC") 'helm-M-x)
+        (define-key evil-normal-state-map (kbd "SPC SPC") 'helm-M-x))
+    
+      (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
+      (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
+      (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
+      (define-key evil-normal-state-map (kbd "SPC f") 'ido-find-file)
+    
+      (define-key evil-normal-state-map (kbd "[ SPC") (bind (evil-insert-newline-above) (forward-line)))
+      (define-key evil-normal-state-map (kbd "] SPC") (bind (evil-insert-newline-below) (forward-line -1)))
+      (define-key evil-normal-state-map (kbd "[ e") (kbd "ddkP"))
+      (define-key evil-normal-state-map (kbd "] e") (kbd "ddp"))
+      (define-key evil-normal-state-map (kbd "[ b") 'previous-buffer)
+      (define-key evil-normal-state-map (kbd "] b") 'next-buffer)
+      (define-key evil-normal-state-map (kbd "[ q") 'previous-error)
+      (define-key evil-normal-state-map (kbd "] q") 'next-error)
+    
+      (define-key evil-normal-state-map (kbd "g p") (kbd "` [ v ` ]"))
+    
+      (after 'etags-select
+        (define-key evil-normal-state-map (kbd "g ]") 'etags-select-find-tag-at-point))
+    
+      (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
+      (define-key evil-normal-state-map (kbd "C-q") 'universal-argument)
+    
+      (define-key evil-normal-state-map (kbd "C-h") 'evil-window-left)
+      (define-key evil-normal-state-map (kbd "C-j") 'evil-window-down)
+      (define-key evil-normal-state-map (kbd "C-k") 'evil-window-up)
+      (define-key evil-normal-state-map (kbd "C-l") 'evil-window-right)
+    
+      (define-key evil-motion-state-map "j" 'evil-next-visual-line)
+      (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
+    
+      (define-key evil-normal-state-map (kbd "Y") (kbd "y$"))
+    
+      (define-key evil-visual-state-map (kbd ", e") 'eval-region)
+    
+      ;; emacs lisp
+      (after 'elisp-slime-nav-autoloads
+        (evil-define-key 'normal emacs-lisp-mode-map (kbd "g d") 'elisp-slime-nav-find-elisp-thing-at-point)
+        (evil-define-key 'normal emacs-lisp-mode-map (kbd "K") 'elisp-slime-nav-describe-elisp-thing-at-point))
+    
+      (after 'ag-autoloads
+        (define-key evil-normal-state-map (kbd "SPC /") 'ag-regexp-project-at-point))
+    
+      (after 'multiple-cursors
+        (define-key evil-visual-state-map (kbd "C->") 'mc/mark-all-like-this)
+        (define-key evil-normal-state-map (kbd "C->") 'mc/mark-next-like-this)
+        (define-key evil-normal-state-map (kbd "C-<") 'mc/mark-previous-like-this))
+    
+      (after 'ace-jump-mode-autoloads
+        (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
+        (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
+        (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
+    
+      (after 'magit
+        (define-key magit-status-mode-map (kbd "C-n") 'magit-goto-next-sibling-section)
+        (define-key magit-status-mode-map (kbd "C-p") 'magit-goto-previous-sibling-section)
+        (evil-add-hjkl-bindings magit-status-mode-map 'emacs
+          "K" 'magit-discard-item
+          "l" 'magit-key-mode-popup-logging
+          "h" 'magit-toggle-diff-refine-hunk))
+    
+      ;; butter fingers
+      (evil-ex-define-cmd "Q" 'evil-quit)
+      (evil-ex-define-cmd "Qa" 'evil-quit-all)
+      (evil-ex-define-cmd "QA" 'evil-quit-all)
 #+END_SRC
 ** Evil-org-mode
    From https://github.com/edwtjo/evil-org-mode/blob/master/evil-org.el
@@ -912,12 +914,12 @@ representing colors with the color they represent as background.
 #+BEGIN_SRC emacs-lisp
   (require-package 'project-explorer)
   (use-package project-explorer
+    :commands (progn project-explorer project-explorer-open pe/show-file)
     :config
       (progn
         (setq pe/omit-regex (concat pe/omit-regex "\\|^node_modules$"))
       )
     )
-
 #+END_SRC
 * ace-jump-mode
 #+BEGIN_SRC emacs-lisp
